--- a/locales/en.json
+++ b/locales/en.json
@@ -217,7 +217,7 @@
     "profile-error": "Profile error: no or empty response from server",
     "strava-error": "Error getting Strava segments: {{error}}",
     "temporary-profile": "<strong>Note:</strong> Uploaded custom profiles are only cached temporarily on the server.<br/>Please save your edits to your local PC.",
-    "tracks-load-error'": "Error loading tracks: {{error}}",
+    "tracks-load-error": "Error loading tracks: {{error}}",
     "upload-error": "Upload error: {{error}}"
   }
 }
