Set button labels of both save and upload to "Apply"
It's the same action and that the profile is uploaded is an
implementation detail. Apply will also be used for proper profile URL
parameters.

--- a/locales/en.json
+++ b/locales/en.json
@@ -209,8 +209,7 @@
       "help": "Help",
       "no_easy_configuration_warning": "No easy configuration is available for this profile.",
       "placeholder": "Write your custom profile here.",
-      "save": "Save",
-      "upload": "Upload"
+      "apply": "Apply"
     }
   },
   "title": "BRouter web client",
