Add switch to turn off centering hovered data table entry on map (#241)

--- a/locales/en.json
+++ b/locales/en.json
@@ -172,6 +172,7 @@
       "title": "Customize profile"
     },
     "data": {
+      "sync-map": "Synchronize map",
       "title": "Data"
     },
     "itinerary": {
